--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 	<html>
 		<head>
 			<meta P-EQUIV="content-type" CONTENT="text/html; CHARSET=UTF-8"> 
+			<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
 		</head>
 		<body>
 			<table width=95% border="1" align="center">
