--- a/index.html
+++ b/index.html
@@ -1,25 +1,79 @@
+<!DOCTYPE html>
 	<html>
 		<head>
 			<meta P-EQUIV="content-type" CONTENT="text/html; CHARSET=UTF-8"> 
-			<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
+			<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+			<title> Wiktor Ejsmont </title>
+			<LINK href="style.css" rel="stylesheet" type="text/CSS">
+				<style>
+					body{
+						background-color: lightslategray;
+					}
+					iframe{
+						border: 5px wheat solid;
+						background-color: darkgray;
+					}
+					a{
+						color: aqua;
+					}
+					a:visited{
+						color: deepskyblue;
+					}
+				</style>
 		</head>
 		<body>
-			<table width=95% border="1" align="center">
+			<table width=95% border="1" align="center" height="700">
 				<tr>
 					<td width=18% align=center>
-						<a href="http://www.kuratorium.gda.pl" target="strony">Kuratorium</a>
-				<br>
-						<a href="http://www.wp.pl" target="strony">Portal WP</a>
+
+					<marquee bgcolor="red"> Ejsmont </marquee>
+						Linki do zadań
+						<ol type="1">
+							<li> <a href="Ejsm_z2.html" target="strony"> Zadanie 2 </a> </li>
+							<li> <a href="Ejsm_z3.html" target="strony"> Zadanie 3 </a> </li>
+							<li> <a href="Ejsm_z4.html" target="strony"> Zadanie 4 </a> </li>
+							<li> <a href="Ejsm_z5_1.html" target="strony"> Zadanie 5-importowany </li>
+							<li> <a href="Ejsm_z5_2.html" target="strony"> Zadanie 5-zewnętrzny </li>
+							<li> <a href="Ejsm_z5_3.html" target="strony"> Zadanie 5-wewnętrzny </li>
+							<li> <a href="Ejsm_z5_4.html" target="strony"> Zadanie 5-liniowy </li>
+							<li> <a href="Ejsm_z6.html" target="strony"> Zadanie 6 </li>
+							<!-- <li> <a href="Ejsm_z7.html" target="strony"> Zadanie 7 </li>
+							<li> <a href="Ejsm_z8.html" target="strony"> Zadanie 8 </li>
+							<li> <a href="Ejsm_z9.html" target="strony"> Zadanie 9 </li>
+							<li> <a href="Ejsm_z10.html" target="strony"> Zadanie 10 </li>
+							<li> <a href="Ejsm_z11.html" target="strony"> Zadanie 11 </li>
+							<li> <a href="Ejsm_z12.html" target="strony"> Zadanie 12 </li>
+							<li> <a href="Ejsm_z13.html" target="strony"> Zadanie 13 </li>
+							<li> <a href="Ejsm_z14.html" target="strony"> Zadanie 14 </li>
+							<li> <a href="Ejsm_z15.html" target="strony"> Zadanie 15 </li>
+							<li> <a href="Ejsm_z16.html" target="strony"> Zadanie 16 </li> -->
+						</ol>
+
 					</td>
 					
 					<td align=center>
-						<iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
+
+						<iframe width=100% height="700" name="strony" src="start.html" ></iframe>
+
 					</td>
 					
 					<td width=18% align=center>
-						<a href="start.html" target="strony">Start</a>
+
+						Linki do kodów zadań
+						<ol type="1">
+							<li> <a href="kod_z5_1_Ejsm.html" target="strony"> Z5_kod-importowany </a> </li>
+							<li> <a href="kod_z5_2_Ejsm.html" target="strony"> Z5_kod-zewnętrzny </a> </li>
+							<li> <a href="kod_z5_3_Ejsm.html" target="strony"> Z5_kod-wewnętrzny </a> </li>
+							<li> <a href="kod_z5_4_Ejsm.html" target="strony"> Z5_kod-liniowy  </a> </li>
+							<li> <a href="kod_z6_Ejsm.html" target="strony"> Zadanie 6 kod  </a> </li>
+							<!-- <li> <a href="kod_z13_Ejsm.html" target="strony"> Zadanie 13 kod  </a> </li>
+							<li> <a href="kod_z15_Ejsm.html" target="strony"> Zadanie 15 kod  </a> </li> -->
+						</ol>
+
 					</td>
 				</tr>
 			</table>
+
+			<!--Wiktor Ejsmont 06-03-2023--> 
 		</body>
 	</html>
