--- a/index.html
+++ b/index.html
@@ -4,65 +4,48 @@
 			<meta P-EQUIV="content-type" CONTENT="text/html; CHARSET=UTF-8"> 
 			<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 			<title> Wiktor Ejsmont </title>
-			<LINK href="style.css" rel="stylesheet" type="text/CSS">
-				<style>
-					body{
-						background-color: lightslategray;
-					}
-					iframe{
-						border: 5px wheat solid;
-						background-color: darkgray;
-					}
-					a{
-						color: aqua;
-					}
-					a:visited{
-						color: deepskyblue;
-					}
-				</style>
+			<LINK href="main.css" rel="stylesheet" type="text/CSS">
 		</head>
 		<body>
-			<table width=95% border="1" align="center" height="700">
-				<tr>
-					<td width=18% align=center>
+			<div class="content">
+				<div class="link_menu">
+					<marquee bgcolor="red" style="margin-top: 10px"> Ejsmont </marquee>
+					<h1 class="link_title"> Linki do zadań </h1>
+						<a href="Ejsm_z2.html" target="strony"> <p> Zadanie 2 </p> </a> 
+						<a href="Ejsm_z3.html" target="strony"> <p> Zadanie 3 </p> </a> 
+						<a href="Ejsm_z4.html" target="strony"> <p> Zadanie 4 </p> </a> 
+						<a href="Ejsm_z5_1.html" target="strony"> <p> Zadanie 5-importowany </p> </a> 
+						<a href="Ejsm_z5_2.html" target="strony"> <p> Zadanie 5-zewnętrzny </p> </a> 
+						<a href="Ejsm_z5_3.html" target="strony"> <p> Zadanie 5-wewnętrzny </p> </a> 
+						<a href="Ejsm_z5_4.html" target="strony"> <p> Zadanie 5-pniowy </p> </a> 
+						<a href="Ejsm_z6.html" target="strony"> <p> Zadanie 6 </p> </a> 
+						<a href="Ejsm_z7.html" target="strony"> <p> Zadanie 7 </p> </a> 
+						<a href="Ejsm_z8.html" target="strony"> <p> Zadanie 8 </p> </a> 
+						<a href="Ejsm_z9.html" target="strony"> <p> Zadanie 9 </p> </a> 
+						<a href="Ejsm_z10.html" target="strony"> <p> Zadanie 10 </p> </a> 
+						<a href="Ejsm_z11.html" target="strony"> <p> Zadanie 11 </p> </a> 
+						<a href="Ejsm_z12.html" target="strony"> <p> Zadanie 12 </p> </a> 
+						<a href="Ejsm_z13.html" target="strony"> <p> Zadanie 13 </p> </a> 
+						<a href="Ejsm_z14.html" target="strony"> <p> Zadanie 14 </p> </a> 
+						<a href="Ejsm_z15.html" target="strony"> <p> Zadanie 15 </p> </a> 
+						<a href="Ejsm_z16.html" target="strony"> <p> Zadanie 16 </p> </a> 
+						<a href="Ejsm_z17_p1.html" target="strony"> <p> Zadanie 17 p1 </p> </a> 
+						<a href="Ejsm_z17_p2.html" target="strony"> <p> Zadanie 17 p2 </p> </a> 
+				</div>
 
-					<marquee bgcolor="red"> Ejsmont </marquee>
-						Linki do zadań
-						<ol type="1">
-							<li> <a href="Ejsm_z2.html" target="strony"> Zadanie 2 </a> </li>
-							<li> <a href="Ejsm_z3.html" target="strony"> Zadanie 3 </a> </li>
-							<li> <a href="Ejsm_z4.html" target="strony"> Zadanie 4 </a> </li>
-							<li> <a href="Ejsm_z5_1.html" target="strony"> Zadanie 5-importowany </li>
-							<li> <a href="Ejsm_z5_2.html" target="strony"> Zadanie 5-zewnętrzny </li>
-							<li> <a href="Ejsm_z5_3.html" target="strony"> Zadanie 5-wewnętrzny </li>
-							<li> <a href="Ejsm_z5_4.html" target="strony"> Zadanie 5-liniowy </li>
+				<div class="main"> 
+					<iframe name="strony" src="start.html" ></iframe>
+				</div>
 
-						</ol>
+				<div class="kod_menu">
+				<h1 class="link_title"> Linki do kodów zadań </h1>
+					<a href="kod_Ejsm_z5_1.html" target="strony"> <p> Z5-importowany kod </p> </a> 
+					<a href="kod_Ejsm_z5_2.html" target="strony"> <p> Z5-zewnętrzny kod </p> </a> 
+					<a href="kod_Ejsm_z5_3.html" target="strony"> <p> Z5-wewnętrzny kod </p> </a> 
+					<a href="kod_Ejsm_z5_4.html" target="strony"> <p> Z5-pniowy kod </p> </a> 
+					<a href="kod_Ejsm_z6.html" target="strony"> <p> Zadanie 6 kod </p> </a> 
+				</div>
 
-					</td>
-					
-					<td align=center>
-
-						<iframe width=100% height="700" name="strony" src="start.html" ></iframe>
-
-					</td>
-					
-					<td width=18% align=center>
-
-						Linki do kodów zadań
-						<ol type="1">
-							<li> <a href="kod_z5_1_Ejsm.html" target="strony"> Z5_kod-importowany </a> </li>
-							<li> <a href="kod_z5_2_Ejsm.html" target="strony"> Z5_kod-zewnętrzny </a> </li>
-							<li> <a href="kod_z5_3_Ejsm.html" target="strony"> Z5_kod-wewnętrzny </a> </li>
-							<li> <a href="kod_z5_4_Ejsm.html" target="strony"> Z5_kod-liniowy  </a> </li>
-
-
-						</ol>
-
-					</td>
-				</tr>
-			</table>
-
-			<!--Wiktor Ejsmont 06-03-2023--> 
+			</div>
 		</body>
 	</html>
