--- a/start.html
+++ b/start.html
@@ -1,6 +1,12 @@
+<!DOCTYPE html>
 	<html>
 		<head>
 			<META HTTP-EQUIV="content-type" CONTENT="text/html; CHARSET=UTF-8">
+			<style>
+				body{
+					background-color: rgb(92, 143, 194);
+				}
+			</style>
 		</head>
 		<body>
 			<h1 align="center">13 Tech. Gdańsk<br>przyjazna szkoła
