--- a/Ejsm_z2.html
+++ b/Ejsm_z2.html
@@ -2,14 +2,14 @@
 	<html>
 		<head>
 			<meta P-EQUIV="content-type" CONTENT="text/html; CHARSET=UTF-8">
-			<LINK href="style.css" rel="stylesheet" type="text/CSS">
+			<LINK href="teoria.css" rel="stylesheet" type="text/CSS">
 		</head>
 		
-		<body style="text-align: center;">
+		<body>
 			<h1> CSS-Kaskadowe Arkusze Stylów </h1> 
-			<span> 
+			<p> 
 				(z ang.Cascading Style Sheets) jest to specjalny język stworzony w celu elastycznego zarządzania sposobem formatowania (wyglądem) elementów znajdujących się na stronach WWW. 
-			</span>
+			</p>
 			
 			<!--Wiktor Ejsmont 06-03-2023--> 
 		</body>
