--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 						<a href="Ejsm_z5_1.html" target="strony"> <p> Zadanie 5-importowany </p> </a> 
 						<a href="Ejsm_z5_2.html" target="strony"> <p> Zadanie 5-zewnętrzny </p> </a> 
 						<a href="Ejsm_z5_3.html" target="strony"> <p> Zadanie 5-wewnętrzny </p> </a> 
-						<a href="Ejsm_z5_4.html" target="strony"> <p> Zadanie 5-pniowy </p> </a> 
+						<a href="Ejsm_z5_4.html" target="strony"> <p> Zadanie 5-liniowy </p> </a> 
 						<a href="Ejsm_z6.html" target="strony"> <p> Zadanie 6 </p> </a> 
  
 				</div>
@@ -31,7 +31,7 @@
 					<a href="kod_Ejsm_z5_1.html" target="strony"> <p> Z5-importowany kod </p> </a> 
 					<a href="kod_Ejsm_z5_2.html" target="strony"> <p> Z5-zewnętrzny kod </p> </a> 
 					<a href="kod_Ejsm_z5_3.html" target="strony"> <p> Z5-wewnętrzny kod </p> </a> 
-					<a href="kod_Ejsm_z5_4.html" target="strony"> <p> Z5-pniowy kod </p> </a> 
+					<a href="kod_Ejsm_z5_4.html" target="strony"> <p> Z5-liniowy kod </p> </a> 
 					<a href="kod_Ejsm_z6.html" target="strony"> <p> Zadanie 6 kod </p> </a> 
 				</div>
 
