--- a/Ejsm_z5_3.html
+++ b/Ejsm_z5_3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title> Styl zewnetrzny </title>
+            <title> Styl wewnetrzny </title>
 			<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 			<!-- wewnetrzny -->
 			<style>
@@ -14,7 +14,7 @@
 		
         <body style="text-align:center;">
 			<p> Ejsmont <br> Znacznik h1 jest największym nagłówkiem a h6 najmniejszym </p>
-
-            <!--Wiktor Ejsmont 10-03-2023--> 
+ 
         </body>
     </html>
+	<!--Wiktor Ejsmont 10-03-2023-->
