--- a/Ejsm_z5_4.html
+++ b/Ejsm_z5_4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
-			<title> Styl zewnetrzny </title>
+			<title> Styl liniowy </title>
 			<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 			<!-- liniowy -->
         </head>
@@ -9,6 +9,6 @@
         <body style="text-align:center;">
 			<p style="color: #800000; font-size: 39px;"> Ejsmont <br> Podłączenie liniowe stylu CSS ma najwyższy piorytet </p>
 
-            <!--Wiktor Ejsmont 10-03-2023--> 
         </body>
     </html>
+    <!--Wiktor Ejsmont 10-03-2023--> 
