--- a/kod_Ejsm_z15.html
+++ b/kod_Ejsm_z15.html
@@ -5,8 +5,8 @@
             <link href="kody.css" rel="stylesheet" type="text/CSS">
         </head>
         <body>
-		    <ol> 
-			    <li> Kod HTML </li>
+            <ol>
+                <li> Kod HTML </li>
                 <div class="kod"> 
                     &lt;!DOCTYPE html&gt; <br>
                     &ensp;&ensp; &lt;html&gt; <br>
@@ -21,11 +21,11 @@
                     &ensp;&ensp;&ensp;&ensp;&ensp;&ensp; ;) Mrugniecie <br>
                     &ensp;&ensp;&ensp;&ensp;&ensp;&ensp; &lt;p&gt; :*( płacz &lt;/p&gt; <br>
                     &ensp;&ensp;&ensp;&ensp;&ensp;&ensp; -_- znudzenie <br>
-                    &ensp;&ensp;&ensp;&ensp; &lt;!--Wiktor Ejsmont 17-03-2023--&gt;  <br>
+                    &ensp;&ensp;&ensp;&ensp; &lt;!--Wiktor Ejsmont 2023--&gt;  <br>
                     &ensp;&ensp;&ensp;&ensp; &lt;/body&gt; <br>
                     &ensp;&ensp; &lt;/html&gt;
 			    </div>
-			    <li> Kod CSS </li>
+                <li> Kod CSS </li>
 			    <div class="kod">
                     body{ <br>
                     &ensp;&ensp; color: blue; <br>
@@ -37,7 +37,8 @@
                     } <br>
                     /* Wikor Ejsmont 17-03-2023 */
 			    </div>
+            </ol>
 
         </body>
     </html>
-    <!--Wiktor Ejsmont 17-03-2023--> 
+    <!--Wiktor Ejsmont 15-05-2023--> 
