--- a/kod_Ejsm_z5_4.html
+++ b/kod_Ejsm_z5_4.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <meta charset="UTF-8">
+            <meta P-EQUIV="content-type" CONTENT="text/html; CHARSET=UTF-8">
+            <link href="kody.css" rel="stylesheet" type="text/CSS">
         </head>
         <body>
 			<ol>
 			<li> Kod HTML </li>
+			<div class="kod">
+            &lt;!DOCTYPE html&gt; <br>
+            &ensp;&ensp; &lt;html&gt; <br>
+            &ensp;&ensp;&ensp;&ensp; &lt;head&gt; <br>
+            &ensp;&ensp;&ensp;&ensp;&ensp;&ensp; &lt;title&gt; Styl liniowy &lt;/title&gt; <br>
+            &ensp;&ensp;&ensp;&ensp;&ensp;&ensp; &lt;meta http-equiv="Content-Type" content="text/html; charset=utf-8"&gt; <br>
+            &ensp;&ensp;&ensp;&ensp;&ensp;&ensp; &lt;!-- liniowy --&gt; <br>
+            &ensp;&ensp;&ensp;&ensp; &lt;/head&gt; <br>
+            &ensp;&ensp;&ensp;&ensp; &lt;body style="text-align:center;"&gt; <br>
+            &ensp;&ensp;&ensp;&ensp;&ensp;&ensp; &lt;p style="color: #800000; font-size: 39px;"&gt; Ejsmont &lt;br&gt; Podłączenie liniowe stylu CSS ma najwyższy piorytet &lt;/p&gt; <br>
+            &ensp;&ensp;&ensp;&ensp; &lt;!--Wiktor Ejsmont 10-03-2023--&gt;  <br>
+            &ensp;&ensp;&ensp;&ensp; &lt;/body&gt; <br>
+            &ensp;&ensp; &lt;/html&gt; <br>
+			</div>
 			
-			
-			<textarea rows="16" cols="79">
-<!DOCTYPE html>
-    <html>
-        <head>
-			<title> Styl zewnetrzny </title>
-			<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-			<!-- liniowy -->
-        </head>
-        <body style="text-align:center;">
-			<p style="color: #800000; font-size: 39px;"> Ejsmont <br> Podłączenie liniowe stylu CSS ma najwyższy piorytet </p>
-
-            <!--Wiktor Ejsmont 10-03-2023--> 
         </body>
     </html>
-			</textarea>
-			
-			
-            <!--Wiktor Ejsmont 10-03-2023--> 
-        </body>
-    </html>
+    <!--Wiktor Ejsmont 10-03-2023-->
