--- a/Ejsm_z5_1.html
+++ b/Ejsm_z5_1.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
     <html>
         <head>
-		<title> Styl zewnetrzny </title>
+		<title> Styl importowany </title>
 			<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-			<!-- zewnetrzne -->
+			<!-- importowany -->
 			<style>
 				@import url("Ejsm_z5_1.css ");
 			</style>
@@ -12,6 +12,6 @@
         <body style="text-align:center;">
 			<p> Ejsmont <br> HTML5 to najnowszy standard języka HTML  </p>
 
-            <!--Wiktor Ejsmont 10-03-2023--> 
         </body>
     </html>
+    <!--Wiktor Ejsmont 10-03-2023--> 
