--- a/Ejsm_z5_2.html
+++ b/Ejsm_z5_2.html
@@ -3,13 +3,13 @@
         <head>
            <title> Styl zewnetrzny </title>
 			<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-			<!-- wewnetrzny -->
+			<!-- zewnetrzny -->
 			<LINK href="Ejsm_z5_2.css" rel="stylesheet" type="text/CSS">
         </head>
         
         <body style="text-align:center;">
 			<p> Ejsmont <br> Najnowszy standard CSS to CSS 3 </p>
-
-            <!--Wiktor Ejsmont 10-03-2023--> 
+ 
         </body>
     </html>
+    <!--Wiktor Ejsmont 10-03-2023-->
