--- a/index.html
+++ b/index.html
@@ -19,7 +19,23 @@
 						<a href="Ejsm_z5_3.html" target="strony"> <p> Zadanie 5-wewnętrzny </p> </a> 
 						<a href="Ejsm_z5_4.html" target="strony"> <p> Zadanie 5-liniowy </p> </a> 
 						<a href="Ejsm_z6.html" target="strony"> <p> Zadanie 6 </p> </a> 
- 
+						<a href="Ejsm_z7.html" target="strony"> <p> Zadanie 7 </p> </a> 
+						<a href="Ejsm_z8.html" target="strony"> <p> Zadanie 8 </p> </a> 
+						<a href="Ejsm_z9.html" target="strony"> <p> Zadanie 9 </p> </a> 
+						<a href="Ejsm_z10.html" target="strony"> <p> Zadanie 10 </p> </a> 
+						<a href="Ejsm_z11.html" target="strony"> <p> Zadanie 11 </p> </a> 
+						<a href="Ejsm_z12.html" target="strony"> <p> Zadanie 12 </p> </a> 
+						<a href="Ejsm_z13.html" target="strony"> <p> Zadanie 13 </p> </a> 
+						<a href="Ejsm_z14.html" target="strony"> <p> Zadanie 14 </p> </a> 
+						<a href="Ejsm_z15.html" target="strony"> <p> Zadanie 15 </p> </a> 
+						<!-- <a href="Ejsm_z16.html" target="strony"> <p> Zadanie 16 </p> </a>  -->
+						<!-- <a href="Ejsm_z17_p1.html" target="strony"> <p> Zadanie 17 p1 </p> </a> 
+						<a href="Ejsm_z17_p2.html" target="strony"> <p> Zadanie 17 p2 </p> </a>  -->
+						<a href="Ejsm_z32.html" target="strony"> <p> Zadanie 32 </p> </a> 
+						<a href="Ejsm_z33.html" target="strony"> <p> Zadanie 33 </p> </a> 
+						<a href="Ejsm_z35.html" target="strony"> <p> Zadanie 35 </p> </a> 
+						<a href="Ejsm_z36.html" target="strony"> <p> Zadanie 36 </p> </a> 
+
 				</div>
 
 				<div class="main"> 
@@ -33,6 +49,11 @@
 					<a href="kod_Ejsm_z5_3.html" target="strony"> <p> Z5-wewnętrzny kod </p> </a> 
 					<a href="kod_Ejsm_z5_4.html" target="strony"> <p> Z5-liniowy kod </p> </a> 
 					<a href="kod_Ejsm_z6.html" target="strony"> <p> Zadanie 6 kod </p> </a> 
+					<a href="kod_Ejsm_z13.html" target="strony"> <p> Zadanie 13 kod </p> </a> 
+					<a href="kod_Ejsm_z15.html" target="strony"> <p> Zadanie 15 kod </p> </a> 
+					<!-- <a href="kod_Ejsm_z17_1.html" target="strony"> <p> Zadanie 17 p1 kod </p> </a> 
+					<a href="kod_Ejsm_z17_2.html" target="strony"> <p> Zadanie 17 p2 kod </p> </a>  -->
+					<a href="kod_Ejsm_z36.html" target="strony"> <p> Zadanie 36 kod </p> </a> 
 				</div>
 
 			</div>
