--- a/kod_Ejsm_z5_2.html
+++ b/kod_Ejsm_z5_2.html
@@ -1,43 +1,36 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <meta charset="UTF-8">
+            <meta P-EQUIV="content-type" CONTENT="text/html; CHARSET=UTF-8">
+            <link href="kody.css" rel="stylesheet" type="text/CSS">
         </head>
         <body>
 			<ol>
 			<li> Kod HTML </li>
-			
-			
-			<textarea rows="17" cols="79">
-<!DOCTYPE html>
-    <html>
-        <head>
-           <title> Styl zewnetrzny </title>
-			<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-			<!-- wewnetrzny -->
-			<LINK href="Ejsm_z5_2.css" rel="stylesheet" type="text/CSS">
-        </head>
-        <body style="text-align:center;">
-			<p> Ejsmont <br> Najnowszy standard CSS to CSS 3 </p>
-
-            <!--Wiktor Ejsmont 10-03-2023--> 
-        </body>
-    </html>
-			</textarea>
-
-<br><br>
+			<div class="kod">
+                &lt;!DOCTYPE html&gt; <br>
+                &ensp;&ensp; &lt;html&gt; <br>
+                &ensp;&ensp;&ensp;&ensp; &lt;head&gt; <br>
+                &ensp;&ensp;&ensp;&ensp;&ensp;&ensp; &lt;title&gt; Styl zewnetrzny &lt;/title&gt; <br>
+                &ensp;&ensp;&ensp;&ensp;&ensp;&ensp; &lt;meta http-equiv="Content-Type" content="text/html; charset=utf-8"&gt; <br>
+                &ensp;&ensp;&ensp;&ensp;&ensp;&ensp; &lt;!-- zewnetrzny --&gt; <br>
+                &ensp;&ensp;&ensp;&ensp;&ensp;&ensp; &lt;link href="Ejsm_z5_2.css" rel="stylesheet" type="text/CSS"&gt; <br>
+                &ensp;&ensp;&ensp;&ensp; &lt;/head&gt; <br>
+                &ensp;&ensp;&ensp;&ensp; &lt;body style="text-align:center;"&gt; <br>
+                &ensp;&ensp;&ensp;&ensp;&ensp;&ensp; &lt;p&gt; Ejsmont &lt;br&gt; Najnowszy standard CSS to CSS 3 &lt;/p&gt; <br>
+                &ensp;&ensp;&ensp;&ensp; &lt;!--Wiktor Ejsmont 10-03-2023--&gt;  <br>
+                &ensp;&ensp;&ensp;&ensp; &lt;/body&gt; <br>
+                &ensp;&ensp; &lt;/html&gt;
+			</div>
 			<li> Kod CSS </li>
+			<div class="kod">
+                p{ <br>
+                    &ensp;&ensp; color:#008080; <br>
+                    &ensp;&ensp; font-size:49px; <br>
+                } <br>
+                /* Wikor Ejsmont 10-03-2023 */
+            </div>
 			
-			
-			<textarea rows="6" cols="79">
-p{
-    color:#008080;
-    font-size:49px;
-}
-/* Wikor Ejsmont 10-03-2023 */
-			</textarea>
-			
-			
-            <!--Wiktor Ejsmont 10-03-2023--> 
         </body>
     </html>
+    <!--Wiktor Ejsmont 10-03-2023-->
