--- a/kod_Ejsm_z5_3.html
+++ b/kod_Ejsm_z5_3.html
@@ -1,36 +1,33 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <meta charset="UTF-8">
+            <meta P-EQUIV="content-type" CONTENT="text/html; CHARSET=UTF-8">
+            <link href="kody.css" rel="stylesheet" type="text/CSS">
         </head>
         <body>
 			<ol>
 			<li> Kod HTML </li>
-			
-			
-			<textarea rows="21" cols="79">
-<!DOCTYPE html>
-    <html>
-        <head>
-             <title> Styl zewnetrzny </title>
-            <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-            <!-- wewnetrzny -->
-            <style>
-                p{
-                    color: #800000;
-                    font-size: 59px;
-                }
-            </style>
-        </head>
-        <body style="text-align:center;">
-            <p> Ejsmont <br> Znacznik h1 jest najwiękrzym nagłówkiem a h6 najmniejszym </p>
-            
-            <!--Wiktor Ejsmont 10-03-2023--> 
+			<div class="kod">
+                &lt;!DOCTYPE html&gt; <br>
+                &ensp;&ensp; &lt;html&gt; <br>
+                &ensp;&ensp;&ensp;&ensp; &lt;head&gt; <br>
+                &ensp;&ensp;&ensp;&ensp;&ensp;&ensp; &lt;title&gt; Styl wewnetrzny &lt;/title&gt; <br>
+                &ensp;&ensp;&ensp;&ensp;&ensp;&ensp; &lt;meta http-equiv="Content-Type" content="text/html; charset=utf-8"&gt; <br>
+                &ensp;&ensp;&ensp;&ensp;&ensp;&ensp; &lt;!-- wewnetrzny --&gt; <br>
+                &ensp;&ensp;&ensp;&ensp;&ensp;&ensp; &lt;style&gt; <br>
+                &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;  p{ <br>
+                &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; color: #800000; <br>
+                &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; font-size: 59px; <br>
+                &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; } <br>
+                &ensp;&ensp;&ensp;&ensp;&ensp;&ensp; &lt;/style&gt; <br>
+                &ensp;&ensp;&ensp;&ensp; &lt;/head&gt; <br>
+                &ensp;&ensp;&ensp;&ensp; &lt;body style="text-align:center;"&gt; <br>
+                &ensp;&ensp;&ensp;&ensp;&ensp;&ensp; &lt;p&gt; Ejsmont &lt;br&gt; Znacznik h1 jest najwiękrzym nagłówkiem a h6 najmniejszym &lt;/p&gt; <br>
+                &ensp;&ensp;&ensp;&ensp; &lt;!--Wiktor Ejsmont 10-03-2023--&gt;  <br>
+                &ensp;&ensp;&ensp;&ensp; &lt;/body&gt; <br>
+                &ensp;&ensp; &lt;/html&gt;
+			</div>
+
         </body>
     </html>
-			</textarea>
-			
-			
-            <!--Wiktor Ejsmont 10-03-2023--> 
-        </body>
-    </html>
+    <!--Wiktor Ejsmont 10-03-2023-->
