--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 						<a href="Ejsm_z17_p2.html" target="strony"> <p> Zadanie 17 p2 </p> </a>  -->
 						<a href="Ejsm_z32.html" target="strony"> <p> Zadanie 32 </p> </a> 
 						<a href="Ejsm_z33.html" target="strony"> <p> Zadanie 33 </p> </a> 
+						<a href="Ejsm_z34.html" target="strony"> <p> Zadanie 34 </p> </a>
 						<a href="Ejsm_z35.html" target="strony"> <p> Zadanie 35 </p> </a> 
 						<a href="Ejsm_z36.html" target="strony"> <p> Zadanie 36 </p> </a> 
 
