--- a/index.html
+++ b/index.html
@@ -28,14 +28,19 @@
 						<a href="Ejsm_z13.html" target="strony"> <p> Zadanie 13 </p> </a> 
 						<a href="Ejsm_z14.html" target="strony"> <p> Zadanie 14 </p> </a> 
 						<a href="Ejsm_z15.html" target="strony"> <p> Zadanie 15 </p> </a> 
-						<!-- <a href="Ejsm_z16.html" target="strony"> <p> Zadanie 16 </p> </a>  -->
+						<a href="Ejsm_z16.html" target="strony"> <p> Zadanie 16 </p> </a> 
 						<!-- <a href="Ejsm_z17_p1.html" target="strony"> <p> Zadanie 17 p1 </p> </a> 
 						<a href="Ejsm_z17_p2.html" target="strony"> <p> Zadanie 17 p2 </p> </a>  -->
 						<a href="Ejsm_z32.html" target="strony"> <p> Zadanie 32 </p> </a> 
 						<a href="Ejsm_z33.html" target="strony"> <p> Zadanie 33 </p> </a> 
-						<a href="Ejsm_z34.html" target="strony"> <p> Zadanie 34 </p> </a>
+						<a href="Ejsm_z34.html" target="strony"> <p> Zadanie 34 </p> </a> 
 						<a href="Ejsm_z35.html" target="strony"> <p> Zadanie 35 </p> </a> 
 						<a href="Ejsm_z36.html" target="strony"> <p> Zadanie 36 </p> </a> 
+						<a href="Ejsm_z74.html" target="strony"> <p> Zadanie 74 </p> </a> 
+						<a href="Ejsm_z75.html" target="strony"> <p> Zadanie 75 </p> </a> 
+						<a href="Ejsm_z76.html" target="strony"> <p> Zadanie 76 </p> </a> 
+						<a href="Ejsm_z77.html" target="strony"> <p> Zadanie 77 </p> </a> 
+						<a href="Ejsm_z78.html" target="strony"> <p> Zadanie 78 </p> </a> 
 
 				</div>
 
@@ -55,6 +60,10 @@
 					<!-- <a href="kod_Ejsm_z17_1.html" target="strony"> <p> Zadanie 17 p1 kod </p> </a> 
 					<a href="kod_Ejsm_z17_2.html" target="strony"> <p> Zadanie 17 p2 kod </p> </a>  -->
 					<a href="kod_Ejsm_z36.html" target="strony"> <p> Zadanie 36 kod </p> </a> 
+					<a href="kod_Ejsm_z75.html" target="strony"> <p> Zadanie 75 kod </p> </a> 
+					<a href="kod_Ejsm_z76.html" target="strony"> <p> Zadanie 76 kod </p> </a> 
+					<a href="kod_Ejsm_z77.html" target="strony"> <p> Zadanie 77 kod </p> </a> 
+					<a href="kod_Ejsm_z78.html" target="strony"> <p> Zadanie 78 kod </p> </a> 
 				</div>
 
 			</div>
